[package]
name = "joyus"
version = "0.1.0"
edition = "2024"

[dependencies]
asynk-strim = { version = "0.1" }
axum = { version = "0.8.4" }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["fs"] }
url = { version = "2" }
